# LineWeaver

./: CMakeLists.txt  CMakeSettings.json  README.md  build-libs.cmd  configure.cmd  fetch-libs.cmd  vcpkg.json
dat/: 4C.6-150N-Sim.csv  SinusCosinusToyExample.csv  plain-weave.csv  warpKnittedFabric.csv  weftKnittedFabric.csv
dat/importance/: 4C.6-150N-Sim-importance.csv  SinusCosinusToyExample-importance-RANDOM.csv  plain-weave-importance.csv  warpKnittedFabric-importance.csv  weftKnittedFabric-importance.csv
dat/series/: AndrewsPlot_Teaser.csv  Crops.csv  SmoothSubspace_TRAIN.tsv.csv  cars.csv
res/boundingbox/: boundingbox-fs.glsl  boundingbox-gs.glsl  boundingbox-tcs.glsl  boundingbox-tes.glsl  boundingbox-vs.glsl
res/line/: blend-fs.glsl  blur-fs.glsl  globals.glsl  image-gs.glsl  image-vs.glsl  line-vs.glsl
res/sphere/: line-fs.glsl  line-gs.glsl
res/ui/: ui-fs.glsl  ui-vs.glsl
src/: BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  CMakeLists.txt  CameraInteractor.cpp  CameraInteractor.h  Interactor.cpp  Interactor.h  LineRenderer.cpp  LineRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Viewer.cpp  Viewer.h  main.cpp
src/CSV/: Table.cpp  Table.h  TableData.cpp  TableData.h  TableImportance.cpp  TableImportance.h  csvfile.h  rapidcsv.h
src/RenderingStrategies/: LinkedListRendering.cpp  LinkedListRendering.h  RenderingStrategy.cpp  RenderingStrategy.h
